--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -966,6 +966,39 @@ transition: background-color 0.6s, color 0.6s;
             </div>
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
         </div>
+
+        <div id="skills" class="segment">
+            <h4>Design Skills</h4>
+            <ul>
+                <li>UI Design</li>
+                <li>UX Research</li>
+                <li>Design System</li>
+                <li>Continous Improvement</li>
+                <li>Design Thinking</li>
+                <li>Principles & Rules</li>
+            </ul>
+            <h4>Product Skills</h4>
+            <ul>
+                <li>Product Ownership</li>
+                <li>Continous Improvement</li>
+                <li>Responsive Web.</li>
+                <li>App Design</li>
+                <li>CMS & Admin Tools</li>
+                <li>Analytics</li>
+            </ul>
+            <h4>Development Skills</h4>
+            <ul>
+                <li>CSS</li>
+                <li>HTML</li>
+                <li>JS</li>
+                <li>SASS</li>
+                <li>Web. Optimization</li>
+                <li>SEO</li>
+                <li>SASS</li>
+                <li>SASS</li>
+            </ul>
+        </div>
+
     </div>
 
     <!-- posts start -->
