--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -869,6 +869,7 @@ padding-right: 0;
 
 <div class="body">
     <div id="intro" class="section">
+        <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/tkyo.png);" ></span>
         <h2>Hi, I'm Peter.</h2>
         <p class="l b"><span>A Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
     </div>
