--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -155,7 +155,7 @@
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
-h2, h3, h3 a, p.l, p.l span{
+h1, h2, h3, h3 a, p.l, p.l span{
 font-family: 'Lora';
 }
 #intro h2{
