--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -546,6 +546,11 @@ margin: 16px 0 0 0;
 display: block;
 margin: 0 0 12px 0;
 }
+#intro{
+    padding-bottom: 70px;
+    margin: 0 -20px 20px -20px;
+    background-size: 100% auto;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
 /*/////////////////////////////////////////////////////////////*/
