--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -550,6 +550,7 @@ margin: 0 0 12px 0;
     padding-bottom: 70px;
     margin: 0 -20px 20px -20px;
     background-size: 100% auto;
+    background-position: 0 50%;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
