--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -275,7 +275,6 @@ background: #88A4AA;
 .special.v1 ul li{
     background: rgba(255, 255, 255, 0.68);
 }
-#titlebar,
 .img.v1{
     background-color: #FFF;
 }
@@ -546,11 +545,8 @@ margin: 16px 0 0 0;
 display: block;
 margin: 0 0 12px 0;
 }
-#intro{
-    padding-bottom: 70px;
-    margin: 0 -20px 20px -20px;
-    background-size: 100% auto;
-    background-position: 0 50%;
+#intro .img{
+    display: none;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
@@ -785,6 +781,9 @@ transition: background-color 0.6s, color 0.6s;
 /* MOBILES */
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 576px) {
+.container{
+padding-top: 0;
+}
 #titlebar h1{
 display: none;
 }
@@ -807,6 +806,16 @@ flex-direction: column;
 gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
+#intro .img{
+padding-bottom: 70px;
+margin: 0 -20px 20px -20px;
+background-size: 100% auto;
+background-position: 0 50%;
+}
+/*/////////////////////////////////////////////////////////////*/
+#showcase .segment{
+    margin-bottom: 24px;
+}
 #showcase h3 a > span{
     width: 68px;
     height: 30px;
