--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -807,7 +807,7 @@ gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #intro .img{
-padding-bottom: 70px;
+padding-bottom: 70%;
 margin: 0 -20px 20px -20px;
 background-size: 100% auto;
 background-position: 0 50%;
