--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -842,6 +842,12 @@ transition: background-color 0.6s, color 0.6s;
     flex-direction: column;
     gap: 12px;
     }
+    #titlebar h1{
+display: none;
+}
+#titlebar.sticky h1{
+display: block;
+}
     /*/////////////////////////////////////////////////////////////*/
     #showcase h3 a > span{
         width: 68px;
@@ -896,7 +902,7 @@ transition: background-color 0.6s, color 0.6s;
         <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
     </div>
     
-<div id="titlebar"><div>
+<div id="titlebar" class="sticky-element"><div>
     <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
         <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
         <h1>Peter Roper</h1>
