--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -679,10 +679,10 @@ transition: background-color 0.6s, color 0.6s;
 }
 #titlebar.sticky div a,
 #titlebar.sticky nav a{
-    color: #FFF;
+color: #FFF;
 }
 #titlebar.sticky{
-    background-color: #346672;
+background-color: #346672;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
@@ -705,6 +705,12 @@ gap: 12px;
 }
 #pain-points ol{
     gap: 20px;
+}
+#titlebar h1{
+display: none;
+}
+#titlebar.sticky h1{
+display: block;
 }
 /*/////////////////////////////////////////////////////////////*/
 .special ul{
@@ -730,7 +736,7 @@ padding: 16px;
         <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
     </div>
     
-    <div id="titlebar"><div>
+    <div id="titlebar" class="sticky-element"><div>
         <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
             <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
             <h1>Peter Roper</h1>
