--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -782,7 +782,8 @@ transition: background-color 0.6s, color 0.6s;
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 576px) {
 .container{
-padding-top: 0;
+padding-top: 70%;
+position: relative;
 }
 #titlebar h1{
 display: none;
@@ -811,6 +812,11 @@ padding-bottom: 70%;
 margin: 0 -20px 20px -20px;
 background-size: 100% auto;
 background-position: 0 50%;
+display: block;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase .segment{
