--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -782,7 +782,7 @@ transition: background-color 0.6s, color 0.6s;
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 576px) {
 .container{
-padding-top: 70%;
+padding-top: 54%;
 position: relative;
 }
 #titlebar h1{
@@ -808,7 +808,8 @@ gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #intro .img{
-padding-bottom: 70%;
+width: auto;
+padding-bottom: 54%;
 margin: 0 -20px 20px -20px;
 background-size: 100% auto;
 background-position: 0 50%;
