--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -803,7 +803,7 @@ padding: 16px;
     
     <!-- Overview -->
     <div id="intro" class="section">
-        <h2>Optimizing the Initial Experience</h2>
+        <p class="l">Optimizing the Initial Experience</p>
         <div id="project" class="segment">
             <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
             <ul>
