--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -807,10 +807,12 @@ flex-direction: column;
 gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
+#intro{
+    padding-top: 24px;
+}
 #intro .img{
 width: auto;
 padding-bottom: 54%;
-margin: 0 -20px 20px -20px;
 background-size: 100% auto;
 background-position: 0 50%;
 display: block;
