--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -814,6 +814,7 @@ padding-top: 24px;
 width: auto;
 padding-bottom: 62%;
 background-size: 100% auto;
+background-color: #FFF;
 background-position: 0 50%;
 display: block;
 position: absolute;
