--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -556,6 +556,10 @@ opacity: 0;
     max-width: 668px;
     margin-bottom: 16px;
     }
+    .segment p:only-of-type,
+.segment p:last-of-type{
+margin-bottom: 0;
+}
     /*/////////////////////////////////////////////////////////////*/
     /* IMGS */
     /*/////////////////////////////////////////////////////////////*/
