--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -458,6 +458,10 @@ margin-bottom: 8px;
 max-width: 668px;
 margin-bottom: 16px;
 }
+.segment p:only-of-type,
+.segment p:last-of-type{
+margin-bottom: 0;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* SEGMENT */
 /*/////////////////////////////////////////////////////////////*/
