--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -175,7 +175,7 @@ font-weight: 700;
     text-rendering: optimizeLegibility;
     }
     }
-    #intro h2{ font-size: 4.2em; }
+    #intro h2{ font-size: 3.2em; line-height: 135%; }
     h1,h2, h3,h4{
     line-height: 140%; 
     }
