--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -764,34 +764,46 @@ align-items: center;
     }
     /*/////////////////////////////////////////////////////////////*/
     }
-    /*/////////////////////////////////////////////////////////////*/
-    /* TABLETS */
-    /*/////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////*/
+/* TABLETS */
+/*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 992px) {
-
-    /*/////////////////////////////////////////////////////////////*/
-    .navi nav{
-    display: none!important;
-    }
-    .navi nav.links{
-    width: 100%;
-    display: block!important;
-    }
-    .navi nav.links a{
-    margin-bottom: 12px;
-    padding: 0;
-    }
-    #titlebar{
-    padding: 0 40px;
-    }
-    .container{
-    padding: 40px;
-    flex-direction: column;
-    }
-    .body{
-    width: 100%;
-    }
-    /*/////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////*/
+.navi nav{
+display: none!important;
+}
+.navi nav.links{
+width: 100%;
+display: block!important;
+}
+.navi nav.links a{
+margin-bottom: 12px;
+padding: 0;
+}
+.navi .back{
+background-color: #346672;
+color: #FFF;
+box-shadow: #000;
+width: 48px;
+height: 48px;
+line-height: 48px;
+font-size: 24px;
+position: fixed;
+bottom: 16px;
+left: 16px;    
+}
+/*/////////////////////////////////////////////////////////////*/
+#titlebar{
+padding: 0 40px;
+}
+.container{
+padding: 40px;
+flex-direction: column;
+}
+.body{
+width: 100%;
+}
+/*/////////////////////////////////////////////////////////////*/
     #posts .post .img-wrap{
     width: 74px;
     }
