--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -669,6 +669,18 @@ flex-direction: column;
 .body{
 width: 100%;
 }
+.navi .back{
+background-color: #346672;
+color: #FFF;
+box-shadow: #000;
+width: 48px;
+height: 48px;
+line-height: 48px;
+font-size: 24px;
+position: fixed;
+bottom: 16px;
+left: 16px;    
+}
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
