--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -671,15 +671,18 @@ width: 100%;
 }
 .navi .back{
 background-color: #346672;
-color: #FFF;
 box-shadow: #000;
+position: fixed;
+bottom: 16px;
+left: 16px; 
+opacity: 88%;   
+}
+.navi .back .icn{
 width: 48px;
 height: 48px;
 line-height: 48px;
 font-size: 24px;
-position: fixed;
-bottom: 16px;
-left: 16px;    
+color: #FFF;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
