--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -786,7 +786,8 @@ box-shadow: #000;
 position: fixed;
 bottom: 16px;
 left: 16px; 
-opacity: 88%;   
+opacity: 88%;  
+z-index: 100; 
 }
 .navi .back .icn{
 width: 48px;
