--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -775,7 +775,7 @@ padding: 16px;
 <div class="navi sticky-element">
     <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
     <nav class="selected">
-        <a href="#intro" class="selected">Overview</a>
+        <a href="#overview" class="selected">Overview</a>
         <a href="#project">Project</a>
         <a href="#product">Product</a>
         <a href="#context">Context</a>
@@ -821,9 +821,10 @@ padding: 16px;
 </div>
 <div class="body">
     
-    <!-- Overview -->
-    <div id="intro" class="section">
-        <p class="l">Optimizing the Initial Experience</p>
+<!-- Overview -->
+<div id="overview" class="section">
+    <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-1.jpg);"></span>
+    <h2>Optimizing the Initial Experience</h2>
         <div id="project" class="segment">
             <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
             <ul>
