--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -466,6 +466,20 @@ margin-bottom: 0;
 /* SEGMENT */
 /*/////////////////////////////////////////////////////////////*/
 
+/* OVERVIEW */
+
+/*/////////////////////////////////////////////////////////////*/
+.container{
+position: relative;
+}
+#overview .img{
+position: absolute;
+top: 56px;
+left: 244px;
+right: 0;
+}
+/*/////////////////////////////////////////////////////////////*/
+
 /* PROJECT */
 
 /*/////////////////////////////////////////////////////////////*/
@@ -686,16 +700,26 @@ font-size: 24px;
 color: #FFF;
 }
 /*/////////////////////////////////////////////////////////////*/
+#overview .img{
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+}
+/*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SM TABLETS */
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 768px) {
 .container{
-padding: 104px 20px 68px 20px;
+padding: 56% 20px 68px 20px;
 }
 #titlebar{
 padding: 0 20px;
+}
+.body{
+padding-top: 24px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
