--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -363,7 +363,7 @@ padding: 68px 0 0 0;
 /* TITLEBAR */
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
-position: sticky;
+position: fixed;
 top: 0; 
 left: 0;
 right: 0;
