--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -848,7 +848,7 @@ padding: 16px;
 <!-- Overview -->
 <div id="overview" class="section">
     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-1.jpg);"></span>
-    <h2>Optimizing the Initial Experience</h2>
+    <h2>dddOptimizing the Initial Experience</h2>
         <div id="project" class="segment">
             <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
             <ul>
