--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -455,16 +455,16 @@ opacity: 0;
     max-width: 100%;
     max-height: 80vh; 
 }
-    /*/////////////////////////////////////////////////////////////*/
-    /* TITLEBAR */
-    /*/////////////////////////////////////////////////////////////*/
-    #titlebar{
-    position: sticky;
-    top: 0; 
-    left: 0;
-    right: 0;
-    z-index: 100;
-    }
+/*/////////////////////////////////////////////////////////////*/
+/* TITLEBAR */
+/*/////////////////////////////////////////////////////////////*/
+#titlebar{
+position: fixed;
+top: 0; 
+left: 0;
+right: 0;
+z-index: 100;
+}
     #titlebar > div{
     padding: 12px 0;
     max-width: 1012px;
@@ -487,9 +487,9 @@ opacity: 0;
         display: flex;
         gap: 24px;
     }
-    /*/////////////////////////////////////////////////////////////*/
-    /* NAVI */
-    /*/////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////*/
+/* NAVI */
+/*/////////////////////////////////////////////////////////////*/
     .navi nav{
         margin-bottom: 12px;
     }
