--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -933,7 +933,7 @@ display: none;
     <div id="intro" class="section">
         <div class="segment">
             <h2>A cultural blend of British &amp; Japanese.</h2>
-            <p class="l">Born and raised in Yorkshire, England. I have lived more than half of my life in Japan.</p>
+            <p class="l">Born and raised in Yorkshire, England. The second half of my life has been spent in Japan.</p>
             <!--p class="l b">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p-->
             <!--p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p-->
             <!---p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI.  Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p-->
