--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -932,7 +932,7 @@ display: none;
 <div class="body">
     <div id="intro" class="section">
         <div class="segment">
-            <h2>A cultural blend of British &amp; Japanese.</h2>
+            <h2>hhA cultural blend of British &amp; Japanese.</h2>
             <p class="l">Born and raised in Yorkshire, England. The second half of my life has been spent in Japan.</p>
             <!--p class="l b">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p-->
             <!--p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p-->
