--- a/v2/about.html
+++ b/v2/about.html
@@ -917,12 +917,12 @@ display: none;
     </div>
     
 <div id="titlebar" class="sticky-element"><div>
-    <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
+    <a href="https://peteroper.github.io/portfolio/v2/" class="fade-link">
         <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
         <h1>Peter Roper</h1>
     </a>
     <nav class="about links">
-        <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About</a>
+        <a href="https://peteroper.github.io/portfolio/v2/about.html" class="fade-link">About</a>
         <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
     </nav>
 </div></div>
@@ -932,11 +932,11 @@ display: none;
 <div class="body">
     <div id="intro" class="section">
         <div class="segment">
-            <h2>hhA cultural blend of British &amp; Japanese.</h2>
-            <p class="l">Born and raised in Yorkshire, England. The second half of my life has been spent in Japan.</p>
-            <!--p class="l b">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p-->
-            <!--p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p-->
-            <!---p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI.  Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p-->
+            <h2>A Cultural blend of British &amp; Japanese.</h2>
+            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life in Japan.</p>
+            <p class="l b">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p>
+            <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
+            <p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI.  Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p>
         </div>
 
         <div id="interests" class="segment">
@@ -1157,7 +1157,7 @@ display: none;
     <!-- body ENDS -->
 
     <div class="navi sticky-element">
-        <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
+        <a href="https://peteroper.github.io/portfolio/v2/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
         <nav class="selected">
             <a href="#intro">Experience</a>
             <a href="#career">Past Experience</a>
