--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -785,19 +785,19 @@ padding: 16px;
     </div>
     
     <div id="titlebar" class="sticky-element"><div>
-        <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
+        <a href="https://peteroper.github.io/portfolio/v2/" class="fade-link">
             <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
             <h1>Peter Roper</h1>
         </a>
         <nav class="about links">
-            <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About</a>
+            <a href="https://peteroper.github.io/portfolio/v2/about.html" class="fade-link">About</a>
             <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
         </nav>
     </div></div>
 <div id="fade-container" class="container">
 
 <div class="navi sticky-element">
-    <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
+    <a href="https://peteroper.github.io/portfolio/v2/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
     <nav class="selected">
         <a href="#overview" class="selected">Overview</a>
         <a href="#project">Project</a>
