--- a/v2/index.html
+++ b/v2/index.html
@@ -880,12 +880,12 @@ padding-right: 0;
     </div>
 
     <div id="titlebar" class="sticky-element"><div>
-        <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
+        <a href="https://peteroper.github.io/portfolio/v2/" class="fade-link">
             <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
             <h1>Peter Roper</h1>
         </a>
         <nav class="about links">
-            <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About</a>
+            <a href="https://peteroper.github.io/portfolio/v2/about.html" class="fade-link">About</a>
             <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
         </nav>
     </div></div>
@@ -1034,8 +1034,8 @@ padding-right: 0;
     <div id="showcase" class="section">
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="fade-link">Optimizing the Initial Experience <!--span>Case Study <span class="icn material-icons">chevron_right</span></span--></a></h3>
-            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" class="fade-link img"></a>
+            <h3><a href="https://peteroper.github.io/portfolio/v2/initial-experience/" class="fade-link">Optimizing the Initial Experience <!--span>Case Study <span class="icn material-icons">chevron_right</span></span--></a></h3>
+            <a href="https://peteroper.github.io/portfolio/v2/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" class="fade-link img"></a>
         </div>
         <!--div id="content-navigation" class="segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="fade-link">Enhancing Content Browsing</a></h3>
@@ -1043,11 +1043,11 @@ padding-right: 0;
         </div-->
         <div id="adventurecards" class="segment">
             <h3>Enhancing Information Architecture</h3>
-            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg);"></a> 
+            <a href="https://peteroper.github.io/portfolio/v2/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg);"></a> 
         </div>
         <div id="pulse-football" class="segment">
             <h3>Conceptual Football App</h3>
-            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg);"></a>
+            <a href="https://peteroper.github.io/portfolio/v2/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg);"></a>
         </div>
     </div>
     <!-- showcase ends -->
