--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -472,7 +472,7 @@ margin-bottom: 0;
 .container{
 position: relative;
 }
-#overview .img{
+#overview > .img{
 position: absolute;
 top: 56px;
 left: 244px;
@@ -700,7 +700,7 @@ font-size: 24px;
 color: #FFF;
 }
 /*/////////////////////////////////////////////////////////////*/
-#overview .img{
+#overview > .img{
 position: absolute;
 top: 0;
 left: 0;
