--- a/v2/about.html
+++ b/v2/about.html
@@ -957,7 +957,7 @@ display: none;
     <div id="intro" class="section">
         <div class="segment">
             <h2>A Cultural blend of British &amp; Japanese.</h2>
-            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life in Japan.</p>
+            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life living, working and raising a family in Japan.</p>
             <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p>
             <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
         </div>
