--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -701,6 +701,10 @@ line-height: 48px;
 font-size: 24px;
 color: #FFF;
 }
+#titlebar div a,
+#titlebar nav a{
+    color: #FFF;
+}
 /*/////////////////////////////////////////////////////////////*/
 #overview > .img{
 position: absolute;
