--- a/v2/about.html
+++ b/v2/about.html
@@ -511,6 +511,10 @@ z-index: 100;
     .segment{
     padding-bottom: 36px;
     }
+    .section p.l,
+    .section h2{
+    margin-bottom: 24px;
+    }
     .section h3{
     margin-bottom: 16px;
     }
