--- a/v2/about.html
+++ b/v2/about.html
@@ -183,7 +183,8 @@ font-weight: 700;
     h1{ font-weight: 400; }
     p.l { font-size: 2.2em; line-height: 175%; }
     h1, h2, h3 { font-size: 1.8em; }
-    #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+    #skills ul, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+
     h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
     #showcase h3 a > span,
     h3 a, 
