--- a/v2/about.html
+++ b/v2/about.html
@@ -513,10 +513,7 @@ z-index: 100;
     .segment{
     padding-bottom: 36px;
     }
-    .section p.l,
-    .section h2{
-    margin-bottom: 24px;
-    }
+    .section h2,
     .section h3{
     margin-bottom: 16px;
     }
@@ -546,7 +543,7 @@ margin-bottom: 0;
       background-repeat: no-repeat;
       background-size: auto 100%;
     }
-    /*/////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////*/
 .gallery-container {
   overflow-x: auto;
   white-space: nowrap;
@@ -562,19 +559,6 @@ margin-bottom: 0;
   margin-right: 12px; 
   position: relative;
 }
-    /*/////////////////////////////////////////////////////////////*/
-    /* INTRO */
-    /*/////////////////////////////////////////////////////////////*/
-    #intro p{
-    margin: 0 0 8px 0;
-    }
-    #intro p:last-of-type{
-    margin: 16px 0 0 0;
-    }
-    #intro p b{
-    display: block;
-    margin: 0 0 12px 0;
-    }
 /*/////////////////////////////////////////////////////////////*/
 
 /* SPECIAL */
