--- a/v2/about.html
+++ b/v2/about.html
@@ -1129,17 +1129,10 @@ display: none;
     <div class="navi sticky-element">
         <a href="https://peteroper.github.io/portfolio/v2/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
         <nav class="selected">
-            <a href="#intro">Experience</a>
-            <a href="#career">Past Experience</a>
+            <a href="#intro" class="selected">About</a>
+            <a href="#career">Experience</a>
             <a href="#skills">Skills</a>
-            <a href="#goals">Goals</a>
-        </nav>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#personality">Personality</a>
-            <a href="#values">Values</a>
             <a href="#interests">Interests</a>
-            <a href="#journal">Latest Writings</a>
         </nav>
         <nav>
             <a href="#posts">Design Journal</a>
