--- a/v2/about.html
+++ b/v2/about.html
@@ -184,8 +184,8 @@ font-weight: 700;
     p.l { font-size: 2.2em; line-height: 175%; }
 
     h1, h2, h3 { font-size: 1.8em; }
-    #skills ul, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
-
+    #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+    #skills ul li{ font-size: 1.4em; }
     h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
     #showcase h3 a > span,
     h3 a, 
@@ -513,6 +513,7 @@ z-index: 100;
     .segment{
     padding-bottom: 36px;
     }
+    .section ul,
     .section h2,
     .section h3{
     margin-bottom: 16px;
@@ -904,12 +905,7 @@ display: none;
         <div class="segment">
             <h2>A Cultural blend of British &amp; Japanese.</h2>
             <p class="l">Originally from Yorkshire, England. I have spent the second half of my life living, working and raising a family in Japan.</p>
-            <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational smartphone insurance and tech-support provider. </p>
-            <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
-        </div>
-
-        <div id="interests" class="segment">
-            <h4>Interests</h4>
+            <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
             <div class="gallery-container">
                 <div class="gallery">
                     <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
@@ -917,12 +913,16 @@ display: none;
                     <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
               </div>
             </div>
+            <p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI. Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p>
+            <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
+        </div>
+
+        <div id="interests" class="segment">
+            <h4>Interests</h4>
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
         </div>
         
         <div id="skills" class="segment">
-            <h4>UX Skills</h4>
-            <p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI.  Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p>
             <h4>Design Skills</h4>
             <ul>
                 <li>UI Design</li>
