--- a/v2/about.html
+++ b/v2/about.html
@@ -513,7 +513,6 @@ z-index: 100;
     .segment{
     padding-bottom: 36px;
     }
-    .section ul,
     .section h2,
     .section h3{
     margin-bottom: 16px;
@@ -922,7 +921,7 @@ display: none;
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
         </div>
         
-        <div id="skills" class="segment">
+        <div id="design-skills" class="segment">
             <h4>Design Skills</h4>
             <ul>
                 <li>UI Design</li>
@@ -932,6 +931,8 @@ display: none;
                 <li>Design Thinking</li>
                 <li>Principles & Rules</li>
             </ul>
+        </div>
+        <div id="product-skills" class="segment"></div>
             <h4>Product Skills</h4>
             <ul>
                 <li>Product Ownership</li>
@@ -941,6 +942,8 @@ display: none;
                 <li>CMS & Admin Tools</li>
                 <li>Analytics</li>
             </ul>
+        </div>
+        <div id="dev-skills" class="segment">
             <h4>Development Skills</h4>
             <ul>
                 <li>CSS</li>
@@ -952,8 +955,8 @@ display: none;
                 <li>SASS</li>
                 <li>SASS</li>
             </ul>
-            <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
         </div>
+            <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
         <div id="goals" class="segment">
             <h4>Goals</h4>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
