--- a/v2/about.html
+++ b/v2/about.html
@@ -778,6 +778,9 @@ flex-direction: column;
 width: 100%;
 }
 /*/////////////////////////////////////////////////////////////*/
+#posts{
+    border: 0!important;
+}
 #posts .post .img-wrap{
 width: 74px;
 }
@@ -956,11 +959,10 @@ display: none;
                 <li>SASS</li>
             </ul>
         </div>
-            <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
         <div id="goals" class="segment">
-            <h4>Goals</h4>
+            <h4>UX Skill Matrix</h4>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
-            <p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p>
+            <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
         </div>
     </div>
     <!--div id="about" class="section">
