--- a/v2/about.html
+++ b/v2/about.html
@@ -935,7 +935,7 @@ display: none;
                 <li>Principles & Rules</li>
             </ul>
         </div>
-        <div id="product-skills" class="segment"></div>
+        <div id="product-skills" class="segment">
             <h4>Product Skills</h4>
             <ul>
                 <li>Product Ownership</li>
@@ -992,7 +992,6 @@ display: none;
                 </li>
             </ul>
         </div>
-    
     </div-->
 
     <!-- posts start -->
