--- a/v2/about.html
+++ b/v2/about.html
@@ -915,6 +915,9 @@ display: none;
                     <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
               </div>
             </div>
+        </div>
+        <div id="experience" class="segment">
+            <h4>Experience</h4>
             <p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI. Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p>
             <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
         </div>
@@ -923,7 +926,8 @@ display: none;
             <h4>Interests</h4>
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
         </div>
-        
+    </div>
+    <div id="skills" class="section">
         <div id="design-skills" class="segment">
             <h4>Design Skills</h4>
             <ul>
@@ -959,7 +963,7 @@ display: none;
                 <li>SASS</li>
             </ul>
         </div>
-        <div id="goals" class="segment">
+        <div id="matrix" class="segment">
             <h4>UX Skill Matrix</h4>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
             <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
@@ -1133,10 +1137,16 @@ display: none;
     <div class="navi sticky-element">
         <a href="https://peteroper.github.io/portfolio/v2/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
         <nav class="selected">
-            <a href="#intro" class="selected">About</a>
-            <a href="#career">Experience</a>
-            <a href="#skills">Skills</a>
+            <a href="#intro">About</a>
+            <a href="#experience">Experience</a>
             <a href="#interests">Interests</a>
+        </nav>
+        <nav>
+            <a href="#skills">Skills</a>
+            <a href="#design-skills">Design</a>
+            <a href="#product-skills">Product</a>
+            <a href="#dev-skills">Development</a>
+            <a href="#matrix">UX Matrix</a>
         </nav>
         <nav>
             <a href="#posts">Design Journal</a>
