--- a/v2/about.html
+++ b/v2/about.html
@@ -77,8 +77,8 @@
     }
   });
 
-  var navLinks = $('.navi nav a');
-  var navBar = $('.navi nav');
+  var navLinks = $('nav a');
+  var navBar = $('nav');
   var offsetValue = 36;
   var isScrolling = false;
 
@@ -88,7 +88,7 @@
       setTimeout(function() {
         checkScrollPosition();
         isScrolling = false;
-      }, 100); // Adjust the throttle interval as needed
+      }, 600); // Adjust the throttle interval as needed
     }
   });
 
